Thêm tìm kiếm khoá học bên sinh viên. Đăng nhập sai quá 5 lần khoá tài khoản. Hoàn thiện quên mật khẩu

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "phpoffice/phpspreadsheet": "^4.2"
+        "phpoffice/phpspreadsheet": "^4.2",
+        "phpmailer/phpmailer": "^6.10"
     }
 }
